style: create agent responsive popup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,18 @@ html {
 ::-webkit-scrollbar-track {
 	background-color: transparent;
 }
+
+@layer utilities {
+	@layer responsive {
+		/* Hide scrollbar for Chrome, Safari and Opera */
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		.no-scrollbar {
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none; /* Firefox */
+		}
+	}
+}
