feat: add font to payslip

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@ html {
 	font-family: cairo, sans-serif, ui-sans-serif, system-ui;
 }
 
+body {
+	font-family: cairo, sans-serif, ui-sans-serif, system-ui;
+}
+
 .ant-collapse-item {
 	margin: 8px 5px;
 }
